# Distributive

./: CMakeLists.txt  connecteth.cpp  connecteth.ui  ip_validator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
